--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,12 +1,13 @@
+// layout.pug
 doctype html
 html
   head
-    title Sistema HIS
-    meta(charset='utf-8')
-    style.
-      body { font-family: Arial; margin: 20px; }
-      table { border-collapse: collapse; }
-      th, td { padding: 5px 10px; border: 1px solid black; }
-      a { text-decoration: none; color: blue; }
+    title Tu Aplicación HIS
+    // Bootstrap CSS
+    link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OerWEESjD5fGln2zV4s2yBwS8M4sNqR/Kk1F1f0e4z0U" crossorigin="anonymous")
+    // Font Awesome CSS (si quieres usar los iconos)
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer")
   body
     block content
+    // Bootstrap JS
+    script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous")
