--- a/views/pacientes/listado.pug
+++ b/views/pacientes/listado.pug
@@ -23,7 +23,7 @@ block content
           th(style="padding: 8px; border: 1px solid #ddd;") Seguro Médico
           th(style="padding: 8px; border: 1px solid #ddd;") Nº Afiliado
           th(style="padding: 8px; border: 1px solid #ddd;") Fecha de nacimiento
-          th(style="padding: 8px; border: 1px solid #ddd;") Sexo
+          th(style="padding: 8px; border: 1px solid #ddd;") Genero
           th(style="padding: 8px; border: 1px solid #ddd;") Acciones 
       tbody
         each paciente in pacientes
