--- a/views/pacientes/editar.pug
+++ b/views/pacientes/editar.pug
@@ -1,32 +1,36 @@
 extends ../layout
 
 block content
-  h1 Editar paciente
+  h1 Verificar datos del paciente
 
   form(action=`/pacientes/editar/${paciente.id}`, method='POST')
-    div
-      label Nombre:
-      input(type='text', name='nombre', value=paciente.nombre, required)
-    div
-      label Apellido:
-      input(type='text', name='apellido', value=paciente.apellido, required)
+
     div
       label DNI:
       input(type='text', name='dni', value=paciente.dni, required)
     div
+      label Apellido:
+      input(type='text', name='apellido', value=paciente.apellido, required)
+    div
+      label Nombre:
+      input(type='text', name='nombre', value=paciente.nombre, required)
+    div
+      label Teléfono:
+      input(type='text', name='telefono', value=paciente.telefono)
+    div  
+      label Correo electronico:
+      input(type='email', name='correo', value=paciente.correo)
+    div
       label Fecha de nacimiento:
       input(type='date', name='fecha_nacimiento', value=paciente.fecha_nacimiento.toISOString().slice(0,10), required)
     div
-      label Sexo:
+      label Genero:
       select(name='sexo')
         option(value='M' selected=paciente.sexo==='M') M
         option(value='F' selected=paciente.sexo==='F') F
     div
       label Dirección:
       input(type='text', name='direccion', value=paciente.direccion)
-    div
-      label Teléfono:
-      input(type='text', name='telefono', value=paciente.telefono)
     div
       label Seguro Médico:
       select(name='id_seguro')
@@ -38,4 +42,7 @@ block content
 
     div(style="margin-top: 20px")
       a(href='/pacientes', style="margin-right: 10px; padding: 8px 16px; background:#ccc; color:black; text-decoration:none; border-radius:4px;") ← Volver
-      button(type='submit', style="padding: 8px 16px; background:#2196F3; color:white; border:none; border-radius:4px;") 💾 Guardar Cambios
+      button(type='submit', style="padding: 8px 16px; background:#2196F3; color:white; border:none; border-radius:4px;") 💾 Confirmar datos
+      a(href=`/internaciones/nueva/${paciente.id}`, 
+      style="display:inline-block; margin-top:10px; margin-left:15px; padding:8px 16px; background:#4CAF50; border-radius:4px; text-decoration:none; color:white;") Confirmar y Continuar a Internación
+
