Agregado nuevas rutas para la funcionalidad del formulario de seleccion de camas.

--- a/views/internaciones/nueva.pug
+++ b/views/internaciones/nueva.pug
@@ -55,7 +55,7 @@ block content
           option(value="Valores normales") Valores normales
           option(value="Medios") Medios
           option(value="A analizar") A analizar
-        span(style="margin-left: 10px; font-size: 18px;") 📎 Adjuntar (visual)
+        span(style="margin-left: 10px; font-size: 18px;") 📎 Adjuntar 
 
       div
         label Nombre del obstetra:
@@ -125,7 +125,7 @@ block content
           option(value="Valores normales") Valores normales
           option(value="Medios") Medios
           option(value="A analizar") A analizar
-        span(style="margin-left: 10px; font-size: 18px;") 📎 Adjuntar (visual)
+        span(style="margin-left: 10px; font-size: 18px;") 📎 Adjuntar 
 
       div
         label Nombre del cirujano:
@@ -201,7 +201,7 @@ block content
           option(value="Valores normales") Valores normales
           option(value="Medios") Medios
           option(value="A analizar") A analizar
-        span(style="margin-left: 10px; font-size: 18px;") 📎 Adjuntar (visual)
+        span(style="margin-left: 10px; font-size: 18px;") 📎 Adjuntar 
 
     // Urgencia
     div#campos-urgencia(style="display:none; margin-top:10px;")
@@ -254,7 +254,7 @@ block content
           option(value="Dra. Herrera") Dra. Herrera
 
     br
-    button(type="submit" style="margin-top: 15px; padding: 8px 16px;") Confirmar Internación
+    button(type="submit" style="margin-top: 15px; padding: 8px 16px;") Continuar
 
   a(href="/pacientes", style="display:inline-block; margin-top:15px; padding:8px 16px; background:#ccc; border-radius:4px; text-decoration:none;") ← Volver
 
