--- a/views/pacientes/editar.pug
+++ b/views/pacientes/editar.pug
@@ -42,7 +42,7 @@ block content
 
     div(style="margin-top: 20px")
       a(href='/pacientes', style="margin-right: 10px; padding: 8px 16px; background:#ccc; color:black; text-decoration:none; border-radius:4px;") ← Volver
-      button(type='submit', style="padding: 8px 16px; background:#2196F3; color:white; border:none; border-radius:4px;") 💾 Confirmar datos
+      button(type='submit', style="padding: 8px 16px; background:#2196F3; color:white; border:none; border-radius:4px;") 💾 Guardar datos Actualizados
       a(href=`/internaciones/nueva/${paciente.id}`, 
-      style="display:inline-block; margin-top:10px; margin-left:15px; padding:8px 16px; background:#4CAF50; border-radius:4px; text-decoration:none; color:white;") Confirmar y Continuar a Internación
+      style="display:inline-block; margin-top:10px; margin-left:15px; padding:8px 16px; background:#4CAF50; border-radius:4px; text-decoration:none; color:white;") Continuar Internación
 
